--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,7 @@
 baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'jfcaiado.dev'
+
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
